# be-tabungin

./: .env.example  .gitignore  Cargo.toml  README.md  api_examples.http  package-lock.json  run.bat  setup.bat  setup.sh  sync_trigger.sql
.sqlx/: query-03bb7f1015891432961bc476d2156f83096f0722761168c6558eaed1ff59f383.json  query-0a3c5626996c3a76cd983af5d968228500da4eceadd557b11f6e277fdcbc9aa6.json  query-0ffa640bb9e4afabdd6417bb80ed35b9befcf20c90b2de0a56aebd98be07db29.json  query-131affe9a5aa41adc57047c200f0477fc9d8c569f8d128f8885dc27f524da02f.json  query-179cff15dceeec7fd53812847e6eb896fdb4fe37cc24151e1a5959494781e7fa.json  query-18a3ed7dce9ea61d0eb01910d4695c8cf84993abe2a008e74ef76d74284e3d3a.json  query-1981151524b908d7cf7fd1ee268181d8c2d7c951aca7134cac443361aa68c783.json  query-2274e691425ae840359ac4c0570f271010078bd445e5ff5d41f423aa1db2db19.json  query-2ed43e1a8e9e45c3da1961dbef90a0aa6fbe7ce8a9ad0cd1820d0c061baa8f16.json  query-35398fa61fc05ca1846f5d6bb770f9047d3cba23fde93b35451c02a4ec1cdca7.json  query-36efec9c7c7e30293fd01c4df6562683d541e9e5713f956d01a95379db7edc93.json  query-3ab7f5d82253a3580a1a134ba6920525da12c455cfac305a00025912e9ff5f25.json  query-445145c6b43f21f6358349ac74f3d014af2da53d3811e30910e45def8dff9f10.json  query-4b65ac9dd74b65a6d33a6bf1872e1882a41a5374bcae9c147c27ccbe882bcab7.json  query-6ddbef0d8c2f67e2371e5e80a52977866cba0ec2913de0eaa38a2be83b6fca26.json  query-7b4858ca587bf8eb7dd66707cd167fbd97924077ea8395f276900bdd2e89b11f.json  query-7e76c52e8943bbc58523af5eb8114ac67be9a794747fca14c169055981829e21.json  (+25 more)
migrations/: 20250131000001_initial.sql  (+9 more)
(+32 files in other folders)
