[package]
name = "tabungin-api"
version = "0.1.0"
edition = "2021"
default-run = "tabungin-api"

[dependencies]
actix-web = "4.8"
actix-cors = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "bigdecimal", "macros", "migrate"] }
bcrypt = "0.15"
jsonwebtoken = "9.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
validator = { version = "0.18", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
bigdecimal = { version = "0.4", features = ["serde"] }
base64ct = "=1.7.0"

[[bin]]
name = "tabungin-api"
path = "src/main.rs"

[[bin]]
name = "seed_testimoni" 
path = "src/bin/seed_testimoni.rs"